Handle problem 1 and 2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(leetcodecpp SHARED library.cpp)
+find_package(Microsoft.GSL CONFIG REQUIRED)
+add_library(leetcodecpp SHARED two_sum.cpp
+        add_two_numbers.cpp)
+target_link_libraries(leetcodecpp PRIVATE Microsoft.GSL::GSL)
