--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 find_package(Microsoft.GSL CONFIG REQUIRED)
-add_library(leetcodecpp SHARED two_sum.cpp
-        add_two_numbers.cpp)
+file(GLOB leetcode_SRC CONFIGURE_DEPENDS "*.cpp")
+add_library(leetcodecpp SHARED ${leetcode_SRC})
 target_link_libraries(leetcodecpp PRIVATE Microsoft.GSL::GSL)
